# python-2026-1

./: README.md  _quarto.yml  index.qmd  pyproject.toml  temario.qmd
clases/: 001_terminal_python_uv.qmd  002_hola_mundo.ipynb  003_indentado.ipynb  004_variables.ipynb  005_nombres_variables.ipynb  006_strings_lists.ipynb  007_strings_cadenas.ipynb  008_list_comprehension.ipynb  009_built_in_functions.ipynb  010_Operaciones.ipynb  011_bloques_control.ipynb  012_funciones_tipado.ipynb  013_funciones.ipynb  014_importando_funciones.ipynb  015_modificar_funciones.ipynb  016_Instalar_paquetes.ipynb  016a_ejercicio_clase.qmd  017_importando_datos.ipynb  018_importa_DOS.ipynb  019_importa_TRES.ipynb  020_importa_XLS.ipynb  021_ETL_EDA.ipynb  022_parquet.ipynb  023_importando_datos.ipynb  024_ETL.ipynb  025_EDA.ipynb  026_importa_exceles.ipynb  027_EDA_esolmet.ipynb  028_importa_exceles.ipynb  029_EDA.ipynb  030_amplitud_promedio.ipynb  031_importa_exceles.ipynb  035_numpy.ipynb  Untitled1.ipynb  cheat_sheet_uv.qmd  uv-git-github.qmd
clases/.ipynb_checkpoints/: 031_importa_exceles-checkpoint.ipynb  032b_dia_promedio-checkpoint.ipynb  033_modificar_dataframe-checkpoint.ipynb  034_Clases_metodos-checkpoint.ipynb  036_promedio_magnitud-checkpoint.ipynb  099_heatmap_mensual_diario-checkpoint.ipynb  999_dia_promedio_dias-checkpoint.ipynb
clases/tools/: importaciones.py
data/001_raw/: 001.xls  002.xls  003.xls  004.xls  005.xls  006.xls  007.xls  008.xls  009.xls  010.xls  011.xls  012.xls
data/002_processed/: esolmet_2018.csv  (+1 more)
docs/: index.html  search.json
(+48 files in other folders)
