[project]
name = "python-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "xlrd>=2.0.2",
]
